# st-demo-robotarm3d

./: CMakeLists.txt  CONTRIBUTING.md  README.md  qml.qrc  robotarm3d.pro
assets/: readme.txt
assets/animations/: cube_position_0.qad  cube_rotation_0.qad  empty_043_rotation_0.qad  empty_044_rotation_0.qad  empty_046_rotation_0.qad  empty_048_position_0.qad  empty_048_rotation_0.qad  empty_049_rotation_0.qad  empty_050_rotation_0.qad  empty_051_rotation_0.qad
assets/meshes/: cube.mesh  cube_006.mesh  cube_008.mesh  cube_011_mesh.mesh  cube_012_mesh.mesh  cube_013_mesh.mesh  cube_014_mesh.mesh  cube_021.mesh  cube_022.mesh  cube_023.mesh  cube_023_mesh.mesh  cube_mesh.mesh  cylinder_009_mesh.mesh  cylinder_011_mesh.mesh  cylinder_023.mesh  cylinder_023_mesh.mesh  cylinder_028_mesh.mesh  cylinder_030_mesh.mesh  cylinder_035.mesh  cylinder_039.mesh  cylinder_040.mesh  grab.mesh
qml/: Constants.qml  CustomButton.qml  CustomSlider.qml  Floor.qml  LoadingView.qml  Main.qml  MainOverlay.qml  RobotarmEnhanced.qml
src/: main.cpp  systeminfo.cpp  systeminfo.h
